--- a/src/Identity/project.json
+++ b/src/Identity/project.json
@@ -47,7 +47,8 @@
     "Microsoft.AspNetCore.Mvc": "1.0.0",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "Microsoft.AspNetCore.SignalR.Server": "0.2.0-*",
-    "Microsoft.AspNetCore.WebSockets": "0.2.0-*"
+    "Microsoft.AspNetCore.WebSockets": "0.2.0-*",
+    "jQWidgets.AspNetCore.Mvc.Bootstrap.TagHelpers": "1.0.6"
   },
 
   "tools": {
